tiktok-embed-fix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: tiktok-embed-fix
  labels:
    app: tiktok-embed-fix
    component: server
spec:
  selector:
    matchLabels:
      app: tiktok-embed-fix
      component: server
  template:
    metadata:
      labels:
        app: tiktok-embed-fix
        component: server
    spec:
      containers:
        - name: server
          image: ghcr.io/jemand771/tiktok-embed-fix:1.1.0
          ports:
            - containerPort: 80
              name: web
