tiktok-embed-fix/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: tiktok-embed-fix
  labels:
    app: tiktok-embed-fix
    component: redis
spec:
  selector:
    matchLabels:
      app: tiktok-embed-fix
      component: redis
  template:
    metadata:
      labels:
        app: tiktok-embed-fix
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          args:
            - --appendonly
            - "yes"
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis
