tiktok-embed-fix/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: tiktok-embed-fix
spec:
  selector:
    app: tiktok-embed-fix
    component: redis
  ports:
    - port: 6379
      name: redis
      targetPort: redis
