tiktok-embed-fix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: tiktok-embed-fix
spec:
  selector:
    app: tiktok-embed-fix
    component: server
  ports:
    - port: 80
      name: web
      targetPort: web
