tiktok-embed-fix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: tiktok-embed-fix
spec:
  rules:
    - host: tiktok.771.blue
      http:
        paths:
          - backend:
              service:
                name: server
                port:
                  name: web
            pathType: Prefix
            path: /
